# traffic-sim-cpp

./: .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TrafficSim  TrafficSimTests  cmake_install.cmake  pse_traffic_sim.cbp  visualizer.html
input/: demo.xml  example.xml
input/testing/: InvalidSimulationTest12.xml  InvalidSimulationTest2.xml  InvalidSimulationTest5.xml  InvalidSimulationTest6.xml  InvalidXMLParserTest10.xml  InvalidXMLParserTest12.xml  InvalidXMLParserTest13.xml  InvalidXMLParserTest3.xml  InvalidXMLParserTest4.txt  InvalidXMLParserTest5.xml  InvalidXMLParserTest6.xml  InvalidXMLParserTest7.xml  Miscellaneous.xml  NoRoadName.xml  ParsingBusStopNegativePosition.xml  ParsingBusStopNoPosition.xml  ParsingBusStopNoRoad.xml  ParsingBusStopNoWaitTime.xml  ParsingBusStopPositionOutOfBound.xml  ParsingBusStopUndefinedRoad.xml  ParsingBusStopWaitTimeNegative.xml  ParsingBusStopWaitTimeZero.xml  ParsingCrossRoadInvalidRoadCombination.xml  ParsingCrossRoadSameRoads.xml  ParsingCrossroadNegativePosition.xml  ParsingCrossroadOneRoad.xml  ParsingCrossroadPositionOutOfBound.xml  ParsingCrossroadUndefinedRoad.xml  ParsingHappyDay.xml  ParsingRoadBoundaries.xml  ParsingRoadLengthZero.xml  ParsingTrafficLightCycleNegative.xml  ParsingTrafficLightCycleZero.xml  ParsingTrafficLightPositionOutOfBound.xml  ParsingUnknownVehicleType.xml  ParsingVehicleGeneratorRoadUnknown.xml  ParsingVehiclePositionOutOfBound.xml  ValidSimulationTest1.html  ValidSimulationTest1.txt  ValidSimulationTest1.xml  (+19 more)
src/: Simulation.cc  Simulation.cpp  Simulation.h  SimulationTests.cc  TrafficSim  TrafficSim.cc  TrafficSimTests.cc
src/data/: Constants.cc  Constants.h
src/lib/: DesignByContract.h  NulBuffer.h  NullBuffer.h  TestingHelpers.cc  TestingHelpers.h
src/objects/: BusStop.cc  BusStop.h  BusStopTests.cc  CrossRoad.cc  CrossRoad.h  Crossroad.cc  Crossroad.h  CrossroadTests.cc  Entity.cc  Entity.h  EntityTests.cc  Road.cc  Road.h  RoadTests.cc  TrafficLight.cc  TrafficLight.h  TrafficLightTests.cc  Vehicle.cc  Vehicle.h  VehicleGenerator.cc  VehicleGenerator.h  VehicleGeneratorTests.cc  VehicleTests.cc
src/util/: Simulation.cpp  XMLParser.cc  XMLParser.h  XMLParserTests.cc
